--- a/src/pages/admin/admin.css
+++ b/src/pages/admin/admin.css
@@ -191,3 +191,77 @@
     /* Уменьшаем отступы в кнопках */
   }
 }
+
+.custom-search {
+  display: flex;
+  align-items: center;
+  width: 100%;
+  max-width: 300px;
+  flex: 1 1 auto;
+}
+
+.custom-input {
+  flex: 1;
+  height: 33px;
+  border: 1px solid #d9d9d9;
+  border-radius: 8px 0 0 8px;
+  padding: 0 12px;
+  font-size: 16px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  background-color: #fafafa;
+    color: #222222;
+}
+.custom-input::placeholder {
+  color: #222222; /* Цвет плейсхолдера */
+}
+.custom-button {
+  height: 33px;
+  padding: 0 16px;
+  border: 1px solid #d9d9d9;
+  border-left: none;
+  border-radius: 0 8px 8px 0;
+  background-color: #1890ff;
+  color: white;
+  font-size: 16px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+.custom-button:hover {
+  background-color: #167ac6;
+}
+
+/* Медиазапрос для планшетов */
+@media (max-width: 768px) {
+  .custom-search {
+    max-width: 100%;
+  }
+
+  .custom-input,
+  .custom-button {
+    height: 36px;
+    font-size: 14px;
+  }
+}
+
+/* Медиазапрос для мобильных устройств */
+@media (max-width: 480px) {
+  .custom-search {
+    flex-direction: column;
+    align-items: stretch;
+    gap: 10px;
+    /* Добавляем отступы между полем ввода и кнопкой */
+  }
+
+  .custom-input,
+  .custom-button {
+    width: 100%;
+    height: 34px;
+    font-size: 14px;
+  }
+
+  .custom-button {
+    padding: 0 12px;
+    border-radius: 8px;
+  }
+}
