--- a/src/pages/auth/login.css
+++ b/src/pages/auth/login.css
@@ -51,65 +51,60 @@
   border: 1px solid rgb(0, 0, 0);
 }
 
-.login-form>label input[type="submit"] {
-  background: rgba(24, 80, 58, 0.863);
-  margin-top: 10px;
+.login-form>label input::placeholder {
+  color: white !important;
+}
+
+/* Стили кнопки */
+.login-form button {
+  width: 100%;
+  height: 55px;
+  padding: 0 10px;
+  border: none;
+  border-radius: 5px;
+  font-size: 16px;
   font-weight: 700;
   cursor: pointer;
+  color: white;
+  background: rgba(24, 80, 58, 0.863);
+  border: 1px solid rgb(0, 0, 0);
   transition: background 0.3s ease;
 }
 
-.login-form>label input[type="submit"]:hover {
+.login-form button:hover {
   background: #196a40;
 }
 
-::placeholder {
-  color: white !important;
+.login-form button:disabled {
+  background-color: #ccc;
+  cursor: not-allowed;
+  opacity: 0.7;
 }
+
+
 
 /* Media Queries for Mobile and Tablet */
 @media (max-width: 768px) {
   .login {
     background-image: url("../../assets/bg-monile.jpg");
-    /* Замена фона на мобильных */
   }
 
   .login-form {
     max-width: 100%;
-    /* Форма занимает всю ширину */
     padding: 0 20px;
-    /* Отступы по краям для мобильных */
   }
 
-  .login-form>label input {
+  .login-form>label input,
+  .login-form button {
     height: 50px;
-    /* Уменьшаем высоту полей ввода для мобильных */
     font-size: 14px;
-    /* Уменьшаем шрифт для мобильных */
-  }
-
-  .login-form>label input[type="submit"] {
-    height: 50px;
-    /* Высота кнопки на мобильных */
-    font-size: 16px;
-    /* Уменьшаем шрифт кнопки для мобильных */
   }
 }
 
 @media (max-width: 480px) {
-  .login-form>label input {
-    height: 45px;
-    /* Ещё больше уменьшаем высоту полей ввода для очень маленьких экранов */
-    font-size: 14px;
-    background-color: #ddc286;
-    color: #000;
-    border: none;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    /* Добавляем тень */
-    transition: background 0.3s ease, box-shadow 0.3s ease;
-  }
 
-  .login-form>label input[type="submit"] {
+  .login-form>label input,
+  .login-form button {
     height: 45px;
     font-size: 14px;
     background-color: #ddc286;
@@ -119,15 +114,14 @@
     transition: background 0.3s ease, box-shadow 0.3s ease;
   }
 
-  .login-form>label input[type="submit"]:hover {
+  .login-form button:hover {
     background-color: #c4ae71;
     box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2);
-    /* Более заметная тень при наведении */
   }
 
-  .login-form>label input:focus {
+  .login-form>label input:focus,
+  .login-form button:focus {
     background-color: #ddc286;
     box-shadow: 0 0 8px rgba(0, 0, 0, 0.2);
-    /* Добавляем тень при фокусе */
   }
 }
